# python-workout

./: requirements.txt  solutions  stub.txt
ch01/: binary.py  ex1-ec.py  ex1.py  ex2-ec.py  ex2.py  ex3-ec.py  ex3.py  ex4-ec.py  ex4-ec2.py  ex4.py  requirements.txt
ch02/: ex5-ec.py  ex5.py  ex6-ec.py  ex6-ec2.py  ex6-ec3.py  ex6.py  ex7-ec.py  ex7-ec2.py  ex7-ec3.py  ex7.py  ex8-ec.py  ex8-ec2.py  ex8-ec3.py  ex8.py  test.txt
ch03/: ex10-ec.py  ex10-ec2.py  ex10-ec3.py  ex10.py  ex11-ec1.py  ex11-ec2.py  ex11-ec3.py  ex11-sqlite.py  ex11.py  ex12-ec1.py  ex12-ec2.py  ex12.py  ex13-ec.py  ex13-ec2.py  ex13-ec3.py  ex13.py  ex15-ec.py  ex15.py  ex9-ec1.py  ex9-ec2.py  ex9-ec3.py  ex9-ec4.py  ex9-ec5.py  ex9-ec6.py  ex9.py
ch04/: ex14-ec1.py  ex14-ec2.py  ex14-ec3.py  ex14.py  ex15-ec2.py  ex15-ec3.py  ex16-ec.py  ex16-ec2.py  ex16-ec3.py  ex16.py  ex17-ec3.py  ex17.py  test.txt
ch05/: dns_capture.txt  ex18.py  ex18_ec1.py  ex18_ec2.py  ex18_ec3.py  ex19.py  ex19_ec123.py  ex20.py  ex20_ec1.py  ex20_ec2.py  ex20_ec3.py  ex21.py  ex21_ec.py  ex21_ec2.py  ex21_ec3.py  ex22.py  ex22_ec1.py  ex22_ec2.py  ex22_ec3.py  ex23.py  ex23_ec1.py  ex23_ec3.py  ex24.py  ex24_ec1.py  ex24_ec2.py  ex24_ec3.py  example-etc-passwd  test.tsv
ch06/: ex25.py  ex25_ec1.py  ex25_ec2.py  ex25_ec3.py  ex26.py  ex26_ec1.py  ex26_ec2.py  ex26_ec3.py  ex27.py  ex27_ec1.py  ex27_ec2.py  ex27_ec3.py  myfile.txt
ch07/: ex28.py  ex28_ec1.py  ex28_ec2.py  ex28_ec3.py  ex29.py  ex29_ec1.py  ex29_ec2.py  ex29_ec3.py  ex30.py  ex30_ec1.py  (+27 more)
ch08/packaging_tutorial/: README.md  pyproject.toml
(+63 files in other folders)
