[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "example_package_mattcriswell"
version = "0.0.4"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
dependencies = [
    "pytest",
    "mock"
]
readme = "README.md"
requires-python = ">3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
